--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi, I'm a student and aspiring web developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born and raised in Sugar Land, Texas.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like standup comedy, video games, and bicycling.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would love to work in the games industry.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Sugar Land, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To be able to create a career.</p>
     </section>
 
     <footer id="footer">
